--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+:root {
+    --color: #39C0ED;
+  }
 .bg-peach{
     height: 100vh;
     width: 100vw;
@@ -37,9 +40,9 @@
 }
 
 .progresss {
-    height: 219px;
-    width: 220px;
-    background: linear-gradient(to right, #39C0ED 99.99%, transparent), linear-gradient(to bottom, #39C0ED 99.99%, transparent), linear-gradient(to right, #39C0ED 99.99%, transparent), linear-gradient(to bottom, #39C0ED 99.99%, transparent);
+    height: 218px;
+    width: 219px;
+    background: linear-gradient(to right, var(--color) 99.99%, transparent), linear-gradient(to bottom, var(--color) 99.99%, transparent), linear-gradient(to right, var(--color) 99.99%, transparent), linear-gradient(to bottom, var(--color) 99.99%, transparent);
     background-size: 100% 10px, 10px 100%, 100% 10px, 10px 100%;
     background-repeat: no-repeat;
     background-position: -220px 0px, 210px -220px, 220px 209px, 0px 220px;
@@ -48,21 +51,3 @@
     top: -5.5%;   
   }
   
-   
-  @keyframes progresss {
-    0% {
-     background-position: -220px 0px, 210px -220px, 220px 209px, 0px 220px; 
-     }
-    35% {
-      background-position: 0px 0px, 210px -220px, 220px 209px, 0px 220px;
-    }
-    50% {
-      background-position: 0px 0px, 210px 0px, 220px 209px, 0px 220px;
-    }
-    85% {
-      background-position: 0px 0px, 210px 0px, 0px 209px, 0px 220px;
-    }
-    100% {
-      background-position: 0px 0px, 210px 0px, 0px 209px, 0px 0px;
-    }
-  }
